--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      href="images/favicons/apple-icon-180x180.png"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
