add some meta tegs

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
       href="images/favicons/apple-icon-180x180.png"
     />
     <meta charset="utf-8" />
+    <meta name="author" content="Tumorin German" />
+    <meta name="description" content="Website for beauty salon Gera, Poznan" />
+    <meta
+      name="keywords"
+      content="Salon urody, Poznań,  kosmetologia, masaże, mezoterapia mikroigłowa, mezoterapia igłowa, peeling kawitacyjny, peelingi chemiczne, uroda i zdrowie"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
